# et-transkribeerimine

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scripts/: batch_transcribe.py  transcribe.py
src/transcriber/: __init__.py  cli.py  config.py  devices.py  io_audio.py  outputs.py  pipeline.py
