[project]
name = "et-transkribeerimine"
version = "0.1.0"
description = "Batch transcription with TalTechNLP Whisper for Estonian audio/video files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.2.0",
  "transformers>=5.5.4",
  "librosa>=0.10.1",
  "soundfile>=0.12.1",
  "ffmpeg-python>=0.2.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
transcribe-file = "transcriber.cli:single_main"
transcribe-batch = "transcriber.cli:batch_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/transcriber"]
